...
                icon: action_icon,
                onPressed: () {
                  setState(() {
                    if (this.action_icon.icon == Icons.search) {
                      this.action_icon = new Icon(Icons.close);
                      this.app_bar_title = new TextField(
                        key: Key('search_key'),
                        style: new TextStyle(
                          color: Colors.white,
                        ),
                        decoration: new InputDecoration(
                            prefixIcon:
                                new Icon(Icons.search, color: Colors.white),
...
